Fix CSS swiper bullets pagination in dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -34,3 +34,7 @@ body {
   position: relative !important;
   margin-top: 30px;
 }
+
+.dark .swiper-pagination-bullet {
+  background: white;
+} 
